--- a/src/components/gotopbutton/goTopButton.css
+++ b/src/components/gotopbutton/goTopButton.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 4rem;
     right: 2rem;
-    width: 4rem;
+    width: 1rem;
     height: 4rem;
     z-index: -1;
 }
@@ -10,7 +10,7 @@
 .go-top-button{
     width: 0rem;
     height: 0rem;
-    background: #05aced;
+    background: white;
     border-radius: 50%;
     cursor: pointer;
     transition: 0.2s;
@@ -26,7 +26,7 @@
     top: 48%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    color: white;
+    color: #05aced;
     transition: 0.2s;
 }
 
@@ -36,8 +36,8 @@
 
 .show .go-top-button{
     animation: popup 0.3s ease-in-out;
-    width: 3rem;
-    height: 3rem;
+    width: 2.4rem;
+    height: 2.4rem;
     z-index: 11;
 }
 
